# captain-claw

./: .dockerignore  .env.example  .gitignore  =3.9.0  Dockerfile  Dockerfile.flight-deck  LICENCE  MEMORY_STRUCTURE.md  PLAN.md  README.md  README_BINARY.md  README_DETAILED.md  RELEASE_NOTES.md  RELEASE_NOTES_0.4.10.md  RELEASE_NOTES_0.4.14.md  RELEASE_NOTES_0.4.20.md  RELEASE_NOTES_0.4.22.md  REPORT.md  SISTER_SESSION_DESIGN.md  USAGE.md  build-desktop.sh  build.sh  captain_claw.spec  config.yaml  config.yaml.example  default.profraw  docker-compose.flight-deck.yml  docker-compose.yml  docker-entrypoint.sh  download.txt  package-lock.json  package.json  plan.md  pyproject.toml
.claude/: launch.json
botport/: Dockerfile  config.example.yaml  config.yaml  pyproject.toml
botport/botport/: __init__.py  __main__.py  auth.py  concern_manager.py  config.py  connection_manager.py  models.py  protocol.py  registry.py  router.py  server.py  store.py
botport/botport/dashboard/: __init__.py  routes.py  swarm_routes.py
botport/botport/dashboard/static/: dashboard.css  dashboard.js  index.html  swarm.js
botport/botport/swarm/: __init__.py  agent_designer.py  dag.py  decomposer.py  engine.py  file_manager.py  models.py  scheduler.py  store.py
build_support/: generate_icons.py  runtime_hook.py
captain_claw/: __init__.py  agent.py  agent_chunked_processing_mixin.py  agent_completion_mixin.py  agent_context_mixin.py  agent_file_ops_mixin.py  agent_guard_mixin.py  agent_model_mixin.py  agent_orchestration_mixin.py  agent_pipeline_mixin.py  agent_playbook_mixin.py  agent_pool.py  agent_reasoning_mixin.py  agent_research_mixin.py  agent_scale_detection_mixin.py  agent_scale_loop_mixin.py  agent_session_mixin.py  agent_skills_mixin.py  agent_tool_loop_mixin.py  botport_client.py  cli.py  codex_auth_manager.py  cognitive_metrics.py  cognitive_mode.py  cognitive_tempo.py  config.py  cron.py  cron_dispatch.py  datastore.py  deep_memory.py  discord_bridge.py  exceptions.py  execution_queue.py  file_registry.py  file_tree_builder.py  google_oauth.py  google_oauth_manager.py  insights.py  instructions.py  llm_session_logger.py  (+34 more)
desktop/: main.js  package-lock.json  package.json  preload.js
docs/: captain-claw-game-design.md  cognitive-modes.md  frontend-integration-guide.md  playbook_seeds.md  playbooks-export.json
examples/: deep-dive.md  openai-proxy.py
flight-deck/: index.html  package-lock.json  package.json  vite.config.ts
instructions/: README.md  compaction_summary_user_prompt.md  guard_input_user_prompt.md  guard_output_system_prompt.md  guard_output_user_prompt.md  guard_script_tool_user_prompt.md  list_task_extractor_system_prompt.md  list_task_extractor_user_prompt.md  micro_compaction_summary_user_prompt.md  micro_guard_output_system_prompt.md  micro_guard_script_tool_system_prompt.md  micro_guard_script_tool_user_prompt.md  micro_system_prompt.md  (+26 more)
(+732 files in other folders)
